--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://use.fontawesome.com/650c2b0dc5.js"></script>
     <script src="https://kit.fontawesome.com/6d2ea823d0.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet"/>
   </head>
   <body>
@@ -46,7 +47,7 @@
       <div class="link">
         <div class="link--telephone link--box">
           <div class="link--text">
-            <p>tel:0123 456 789</p>
+            <p>tel: 0123 456 789</p>
           </div>
             <div class="link--icon icon--telephone">
               <i class="fas fa-phone-alt"></i>
