class names renamed to follow BEM

--- a/index.html
+++ b/index.html
@@ -11,46 +11,46 @@
   </head>
   <body>
     <div class="container">
-      <div class="link">
-        <div class="link--search link--box">
-          <div class="link--text">
-            <p>Search</p>
+      <div class="item">
+        <div class="item__body item-search item--color-bkgn-blue">
+          <div class="item__text">
+            <p class="text">Search</p>
           </div>
-            <div class="link--icon icon--search">
-              <i class="fas fa-search"></i>
+            <div class="item__icon icon--color-bkgn-blue">
+              <i class="icon fas fa-search"></i>
             </div>
         </div>
       </div>
 
-      <div class="link">
-        <div class="link--read link--box">
-          <div class="link--text">
-            <p>Read more</p>
+      <div class="item">
+        <div class="item__body item-read item--color-bkgn-tile">
+          <div class="item__text">
+            <p class="text">Read more</p>
           </div>
-            <div class="link--icon icon--read">
-              <i class="fas fa-chevron-right"></i>
+            <div class="item__icon icon--color-bkgn-tile">
+              <i class="icon icon--bigger fas fa-chevron-right"></i>
             </div>
         </div>
       </div>
 
-      <div class="link">
-        <div class="link--email link--box">
-          <div class="link--text">
-            <p>me@email.com</p>
+      <div class="item">
+        <div class="item__body item-email item--color-bkgn-yellow">
+          <div class="item__text">
+            <p class="text">me@email.com</p>
           </div>
-            <div class="link--icon icon--email">
-              <i class="fas fa-envelope"></i>
+            <div class="item__icon icon--color-bkgn-yellow">
+              <i class="icon fas fa-envelope"></i>
             </div>
         </div>
       </div>
 
-      <div class="link">
-        <div class="link--telephone link--box">
-          <div class="link--text">
-            <p>tel: 0123 456 789</p>
+      <div class="item">
+        <div class="item__body item-telephone item--color-bkgn-orange">
+          <div class="item__text">
+            <p class="text">tel: 0123 456 789</p>
           </div>
-            <div class="link--icon icon--telephone">
-              <i class="fas fa-phone-alt"></i>
+            <div class="item__icon icon--color-bkgn-orange">
+              <i class="icon fas fa-phone-alt"></i>
             </div>
           </div>
         </div>
