unused class removed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p class="text">Read more</p>
           </div>
             <div class="item__icon icon--color-bkgn-tile">
-              <i class="icon icon--bigger fas fa-chevron-right"></i>
+              <i class="icon fas fa-chevron-right"></i>
             </div>
         </div>
       </div>
