--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="item__text">
             <p class="text">Search</p>
           </div>
-            <div class="item__icon icon--color-bkgn-blue">
+            <div class="item__icon item__icon--color-bkgn-blue">
               <i class="icon fas fa-search"></i>
             </div>
         </div>
@@ -27,7 +27,7 @@
           <div class="item__text">
             <p class="text">Read more</p>
           </div>
-            <div class="item__icon icon--color-bkgn-tile">
+            <div class="item__icon item__icon--color-bkgn-tile">
               <i class="icon fas fa-chevron-right"></i>
             </div>
         </div>
@@ -38,7 +38,7 @@
           <div class="item__text">
             <p class="text">me@email.com</p>
           </div>
-            <div class="item__icon icon--color-bkgn-yellow">
+            <div class="item__icon item__icon--color-bkgn-yellow">
               <i class="icon fas fa-envelope"></i>
             </div>
         </div>
@@ -49,7 +49,7 @@
           <div class="item__text">
             <p class="text">tel: 0123 456 789</p>
           </div>
-            <div class="item__icon icon--color-bkgn-orange">
+            <div class="item__icon item__icon--color-bkgn-orange">
               <i class="icon fas fa-phone-alt"></i>
             </div>
           </div>
